load("@rules_rust//rust:defs.bzl", "rust_library")
load("//sysroot:defs.bzl", "wasm32_build_test")

# wasi-adapter — a guest-side WASI preview1 shim implemented over `mc_sys_*` (VISION §13.4/§16.3),
# ported from memcontainers crates/wasi/adapter. It DEFINES the `wasi_snapshot_preview1` functions
# so the conversion (link-injection + fixpoint-relink) can rewrite a wasm32-wasi box's WASI
# imports to `mc` — the box then imports ONLY `mc` (A4: WASI exists only as a guest adapter, never
# in the kernel). It uses the dependency-free generated bindings (constants_rust + mc_rust), never
# //sysroot, whose `#[panic_handler]` would collide with a tool's std at link time. The default
# lane link-injects the adapter OBJECT into a Rust tool whose std supplies the panic handler, so
# the `standalone` feature (which adds one, for the C/Zig staticlib lane) stays off here.
rust_library(
    name = "wasi_adapter",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "wasi",
    edition = "2021",
    # No native build (no_std + mc imports + wasi exports); the conversion rule re-emits it as an
    # object and injects it into a box. //... reaches it through that rule + this compile gate.
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//contracts:constants_rust",  # errno + O_*/SEEK_* constants (projected)
        "//contracts:mc_rust",  # mc_syscall_table! → the `mc` import block (projected)
    ],
)

# Assert the adapter compiles for wasm32 (the conversion rule emits it as an object + injects it
# into a box; this is the standalone compile gate, mirroring the sysroot's).
wasm32_build_test(
    name = "wasi_adapter_wasm32",
    lib = ":wasi_adapter",
)
