# web — the browser app consumer of the JS host family (SYSTEMS.md §13.4).
#
# Keep the app as a normal Vite package for local iteration, but make the production
# bundle a Bazel action so the stable //web:app target is a real graph node. The
# live browser VM consumes Bazel-staged kernel/image artifacts through Vite's
# public asset path; no checked-in copied wasm/tar assets.

load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

WEB_SOURCES = [
    "index.html",
    "package.json",
    "tsconfig.app.json",
    "tsconfig.json",
    "tsconfig.node.json",
    "vite.config.ts",
] + [
    "tools/vite.mjs",
] + glob([
    "public/**",
    "src/**",
]) + [
    ":hero_vm_assets",
]

# @mc/elements ships a rolldown bundle with its deps inlined, so this app depends on
# @mc/elements ALONE — no transitive closure to re-declare. (The bundle keeps Node
# builtins external; vite stubs them for the browser as before.)
WEB_APP_DEPS = [
    "//docs:reference_sources",
    ":node_modules/@fontsource-variable/inter",
    ":node_modules/@fontsource-variable/inter-tight",
    ":node_modules/@fontsource-variable/newsreader",
    ":node_modules/@fontsource/ibm-plex-mono",
    ":node_modules/@lezer/common",
    ":node_modules/@lezer/highlight",
    ":node_modules/@lezer/javascript",
    ":node_modules/@lezer/lr",
    ":node_modules/@mc/elements",
    ":node_modules/@stylexjs/stylex",
    ":node_modules/@stylexjs/unplugin",
    ":node_modules/@vitejs/plugin-react",
    ":node_modules/react",
    ":node_modules/react-dom",
    ":node_modules/scheduler",
    ":node_modules/typescript",
    ":node_modules/vite",
]

# Kernel + every shipped flavor tar + catalog-compiler.wasm, served at /mc/. The hero
# + "Boot a VM" boot image.tar (loom); the "Images" pill boots a specific flavor from
# /mc/<flavor>.tar; the compiler backs runtime `vm.tool` (host-tool examples).
# Flavor tars are fetched lazily (only when a flavor is booted), so page load is unaffected.
genrule(
    name = "hero_vm_assets",
    srcs = [
        "//memcontainers/kernel/rust:kernel",
        "//memcontainers/images:minimal",
        "//memcontainers/images:posix",
        "//memcontainers/images:loom",
        "//memcontainers/images:atlas",
        "//memcontainers/images:paper",
        "//memcontainers/lib/catalog-compiler:wasm",
        "//memcontainers/programs/browser:browserctl_layer",
    ],
    outs = [
        "public/mc/kernel.wasm",
        "public/mc/image.tar",
        "public/mc/minimal.tar",
        "public/mc/posix.tar",
        "public/mc/loom.tar",
        "public/mc/atlas.tar",
        "public/mc/paper.tar",
        "public/mc/catalog-compiler.wasm",
        "public/mc/browserctl.tar",
    ],
    cmd = """
mkdir -p "$(@D)/public/mc"
cp "$(location //memcontainers/kernel/rust:kernel)" "$(@D)/public/mc/kernel.wasm"
cp "$(location //memcontainers/images:minimal)" "$(@D)/public/mc/minimal.tar"
cp "$(location //memcontainers/images:posix)" "$(@D)/public/mc/posix.tar"
cp "$(location //memcontainers/images:loom)" "$(@D)/public/mc/loom.tar"
cp "$(location //memcontainers/images:atlas)" "$(@D)/public/mc/atlas.tar"
cp "$(location //memcontainers/images:paper)" "$(@D)/public/mc/paper.tar"
cp "$(location //memcontainers/images:loom)" "$(@D)/public/mc/image.tar"
cp "$(location //memcontainers/lib/catalog-compiler:wasm)" "$(@D)/public/mc/catalog-compiler.wasm"
cp "$(location //memcontainers/programs/browser:browserctl_layer)" "$(@D)/public/mc/browserctl.tar"
""",
)

filegroup(
    name = "sources",
    srcs = WEB_SOURCES,
)

js_binary(
    name = "vite_bin",
    chdir = package_name(),
    data = [
        ":node_modules/@stylexjs/unplugin",
        ":node_modules/@vitejs/plugin-react",
        ":node_modules/typescript",
        ":node_modules/vite",
    ],
    entry_point = "tools/vite.mjs",
)

js_binary(
    name = "dev",
    chdir = package_name(),
    data = WEB_APP_DEPS + [
        ":sources",
    ],
    entry_point = "tools/vite.mjs",
    fixed_args = [
        "dev",
        "--host",
        "127.0.0.1",
        "--port",
        "5173",
        # Workspace deps (@mc/elements) change under an unchanged lockfile, which vite's
        # dep-optimizer cache can't see — force re-optimization so stale pre-bundles
        # never miss a new export.
        "--force",
    ],
    visibility = ["//visibility:public"],
)

js_binary(
    name = "tsc_bin",
    chdir = package_name(),
    data = [":node_modules/typescript"],
    entry_point = "tools/tsc-check.mjs",
)

js_run_binary(
    name = "typecheck_app",
    srcs = WEB_APP_DEPS + [
        ":node_modules/@types/react",
        ":node_modules/@types/react-dom",
        ":sources",
    ],
    outs = ["typecheck_app.stamp"],
    args = [
        "--stamp-out",
        "$(execpath typecheck_app.stamp)",
        "--",
        "-p",
        "tsconfig.app.json",
        "--noEmit",
        "--incremental",
        "false",
    ],
    chdir = package_name(),
    tool = ":tsc_bin",
)

js_run_binary(
    name = "typecheck_node",
    srcs = [
        ":node_modules/@stylexjs/unplugin",
        ":node_modules/@types/node",
        ":node_modules/@vitejs/plugin-react",
        ":node_modules/typescript",
        ":node_modules/vite",
        ":sources",
    ],
    outs = ["typecheck_node.stamp"],
    args = [
        "--stamp-out",
        "$(execpath typecheck_node.stamp)",
        "--",
        "-p",
        "tsconfig.node.json",
        "--noEmit",
        "--incremental",
        "false",
    ],
    chdir = package_name(),
    tool = ":tsc_bin",
)

filegroup(
    name = "typecheck",
    srcs = [
        ":typecheck_app",
        ":typecheck_node",
    ],
)

js_run_binary(
    name = "app",
    srcs = WEB_APP_DEPS + [
        ":sources",
    ],
    args = [
        "build",
        "--outDir",
        "dist",
    ],
    chdir = package_name(),
    out_dirs = ["dist"],
    tool = ":vite_bin",
    visibility = ["//visibility:public"],
)
