# Developer conveniences (SYSTEMS.md). Thin wrappers that orchestrate *nothing
# about correctness* — every artifact they touch is already a hermetic target.
# This is where the 2,384-line memcontainers `xtask` goes to die: a handful of
# `bazel run` aliases, not an imperative build orchestrator.
#
# Phase A adds, e.g.:
#   //bazel/tools:fmt    — run rustfmt + zig fmt + prettier over the tree (a multirun)
#   //bazel/tools:demo   — boot a kernel in hosts/wasmtime and drop into a shell
#
# //bazel/tools/smoke/{zig,rust} are the live bootstrap toolchain proofs — each compiles a
# tiny module to wasm to anchor that language's spine in `bazel test //...` (delete
# once real wasm targets from kernel/ and programs/ exist).
