load("@rules_rust//rust:defs.bzl", "rust_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

# hosts/wasmtime — the Rust host driver (ported from memcontainers crates/host). Loads
# kernel.wasm, implements the `env` bridge + the `mc_ctl_*` control channel, terminates
# TLS for guest egress, and ticks the kernel (VISION §4.1, A3). A NATIVE library + CLI —
# no wasm transition. The SAME kernel.wasm runs here and under hosts/js (A3); both kernels
# run under this host in the parity matrix (B7, §9.6). This is the host every e2e test
# boots — real bytes, no mocks (B6).
#
# Foundation slice: links wasmtime to prove it builds natively under crate_universe (the
# host analog of the kernel's wasmi de-risk). The real HostState / register_bridge /
# KernelHost — and the env/ctl contract consumers — transplant in.
rust_library(
    name = "host",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = ["@host_crates//:wasmtime"],
)

build_test(
    name = "test",
    targets = [":host"],
)
