# Manifest for crate_universe dependency resolution only — the host BUILDS via Bazel
# (rust_library + rust_binary), not cargo. Versions kept in lockstep with memcontainers
# crates/host. Resolved into hosts/wasmtime/Cargo.lock SEPARATELY from the kernel's
# (//MODULE.bazel): a no_std wasm crate and a std native crate cannot share one Cargo
# resolution without feature unification turning on std features that break the kernel.
[package]
name = "host"
version = "0.1.0"
edition = "2021"

[lib]
name = "host"
path = "src/lib.rs"

[[bin]]
name = "mc"
path = "src/main.rs"

[dependencies]
wasmtime = "43.0.0"
# wasmparser — the import-section reader behind //tools/wasm-imports (the conformance §9.3 /
# attestation §16.4 primitive). wasmtime 43 already pins this transitively; declaring it
# direct here is what makes crate_universe surface the top-level `@host_crates//:wasmparser`
# alias. Held at 0.245 (wasmtime 43's resolved line) so re-pinning reuses that crate rather
# than adding a second wasmparser to the lock.
wasmparser = "=0.245.1"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.10.0"
sha2 = "0.10"
tungstenite = { version = "0.29.0", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"] }
ureq = "^2.12"

# Optional async egress (TokioNet) — the mc-server's runtime-integrated net capability,
# kept OFF by default so the CLI/e2e build never pulls an async HTTP client. The server
# enables `tokio-net`.
tokio = { version = "1", features = ["rt"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

[features]
# Swap the sync RealNet (ureq/tungstenite) for the async TokioNet (reqwest on a Tokio
# runtime). Declared here so `cfg(feature = "tokio-net")` is a KNOWN cfg (no warning) and
# the TokioNet code is preserved, compiled only when a consumer (the server) opts in.
tokio-net = ["dep:tokio", "dep:reqwest"]
