load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("//bazel:rust_opt_test.bzl", "rust_opt_test")
load("//bazel:ts.bzl", "mc_ts_project")

package(default_visibility = ["//visibility:public"])

exports_files([
    "control_vectors.json",
    "snapshot_vectors.json",
])

js_library(
    name = "snapshot_vectors_json",
    srcs = ["snapshot_vectors.json"],
)

rust_opt_test(
    name = "abi_test",
    size = "medium",
    srcs = ["src/abi_test.rs"],
    crate_root = "src/abi_test.rs",
    data = [
        "//memcontainers/images:atlas",
        "//memcontainers/images:minimal",
        "//memcontainers/images:paper",
        "//memcontainers/images:posix",
        "//memcontainers/images:svc_test",
    ],
    edition = "2021",
    deps = [
        "//bazel/tools/wasm-imports:lib",
        "//memcontainers/contracts:mc_rust",
        "@rules_rust//rust/runfiles",
    ],
)

rust_opt_test(
    name = "control_vectors_rust_test",
    srcs = ["src/control_vectors_test.rs"],
    crate_root = "src/control_vectors_test.rs",
    data = [":control_vectors.json"],
    edition = "2021",
    deps = [
        "//memcontainers/contracts:ctl_rust",
        "@host_crates//:serde_json",
        "@rules_rust//rust/runfiles",
    ],
)

rust_opt_test(
    name = "runtime_test",
    size = "medium",
    srcs = ["src/runtime_test.rs"],
    crate_root = "src/runtime_test.rs",
    data = [
        "//memcontainers/images:loom",
        "//memcontainers/images:posix",
        "//memcontainers/images:svc_test",
        "//memcontainers/kernel/rust:kernel",
    ],
    edition = "2021",
    deps = [
        "//memcontainers/hosts/wasmtime:host",
        "@rules_rust//rust/runfiles",
    ],
)

mc_ts_project(
    name = "control_vectors_ts_lib",
    srcs = ["test/control_vectors.test.ts"],
    deps = [
        "//:node_modules/@types/bun",
        "//memcontainers/contracts:ts",
    ],
)

js_test(
    name = "control_vectors_ts_test",
    data = [
        ":control_vectors.json",
        ":control_vectors_ts_lib",
    ],
    entry_point = "test/control_vectors.test.js",
    env = {
        "MC_CONTROL_VECTORS": "$(rlocationpath :control_vectors.json)",
    },
)

test_suite(
    name = "conformance",
    tests = [
        ":abi_test",
        ":control_vectors_rust_test",
        ":control_vectors_ts_test",
        ":runtime_test",
    ],
)
