# The four boundaries, single source of truth (SYSTEMS.md, B2). The .kdl files here
# are DEFINED once; every Rust/Zig/TS reference elsewhere is a generated *.gen.*
# projection, never a hand-written copy.
package(default_visibility = ["//visibility:public"])

# Let consumers data-depend on a raw contract (e.g. the conformance import oracle
# reads syscalls.kdl) and on the whole set.
exports_files([
    "syscalls.kdl",
    "bridge.kdl",
    "control.kdl",
    "wire.kdl",
    "constants.kdl",
    # The projected zig descriptor table — //bazel/tools/mc-abi-gate gates mc.zig's hand-kept externs
    # against it via include_str!.
    "gen/mc.gen.zig",
])

filegroup(
    name = "contracts",
    srcs = glob(["*.kdl"]),
)

# ---------------------------------------------------------------------------
# Projections (SYSTEMS.md). One contract → the languages that consume it.
# Each call generates the bindings, compile-validates the rust/zig ones, and gates
# drift via gen/ + diff_test (B2). Consumers depend on the library targets
# (:mc_rust, :env_zig, …); update the committed gen/ copies with
# `bazel run //memcontainers/contracts:<name>_sync`.
# ---------------------------------------------------------------------------
load("//memcontainers/contracts/codegen:defs.bzl", "abi_library")

abi_library(name = "constants", contract = "constants.kdl", langs = ["rust", "zig", "ts"])
abi_library(name = "mc", contract = "syscalls.kdl", langs = ["rust", "zig", "ts", "md"])
abi_library(name = "env", contract = "bridge.kdl", langs = ["rust", "zig", "ts"])
abi_library(name = "ctl", contract = "control.kdl", langs = ["rust", "zig", "ts"])
abi_library(name = "wire", contract = "wire.kdl", langs = ["rust", "ts", "asyncapi"])
